fixed spacing in testimonials, added signature

--- a/frontend-react/src/components/testimonials/Testimonials.css
+++ b/frontend-react/src/components/testimonials/Testimonials.css
@@ -9,7 +9,7 @@
 }
 
 .testimonial-header {
-    margin: 5%;
+    margin-top: 5%;
     font-size: 3rem;
     text-align: center;
 
@@ -29,8 +29,12 @@
     margin-bottom: 10%;
 }
 
+.testimonial h3 {
+    margin-top: 5%;
+}
+
 .testimonial p {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     text-align: left;
 }
 
@@ -44,10 +48,27 @@
     padding: 3rem;
     box-shadow: 2rem 2rem 3rem #ddd7d7;
     margin: 2rem;
+    position: relative;
+
 }
 
 .testimonial-wrapper img {
     border-radius: 100%;
     margin: 2%;
+    width: 20%;
 }
 
+.signature {
+    position: absolute;
+    bottom: 10%;
+    font-style: italic;
+    color: #606060;
+}
+
+
+
+@media (max-width: 602px){
+    .testimonial {
+        width: 100%;
+    }
+}
